bk_ida/gccida/g2/get_inner_reference
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5712:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5718:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5719:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5725:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5732:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5733:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5735:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5739:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5740:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5742:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *low_bound; // [rsp+8h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5748:19: error: expected expression
v9 = ( tree_node *)*( &global_trees + 15); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5748:8: error: use of undeclared identifier 'tree_node'
v9 = ( tree_node *)*( &global_trees + 15); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5749:20: error: expected expression
v10 = ( tree_node *)*( &global_trees + 17); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5749:9: error: use of undeclared identifier 'tree_node'
v10 = ( tree_node *)*( &global_trees + 17); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5755:23: error: expected expression
imag = *( tree_node **)( high + 40); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/expr.c:5755:11: error: use of undeclared identifier 'tree_node'
imag = *( tree_node **)( high + 40); 
          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_inner_reference/src/obj/expr.o] Error 1
